Add Overture Maps support and the DataReader abstraction
Squashes the 223 commits IntelliMapLab made on top of upstream graphhopper into one, so the fork presents as a single change against upstream.

Introduces a common DataReader interface with OSMReader and OvertureReader
implementations, deferred construction through DataReaderInitializer, and a full
Overture Maps reader covering GeoJSON and GeoParquet: the segment model, scoped
rules, linear referencing and segment splitting, the tag-parser pipeline, and S3
access.

Co-Authored-By: 0stapKO <ostap22lviv@gmail.com>
Co-Authored-By: Andr1anka <160362905+Andr1anka@users.noreply.github.com>
Co-Authored-By: Andr1anka <andriana4830@gmail.com>
Co-Authored-By: Andrii Dziuba <andrii.dziuba@intellias.com>
Co-Authored-By: CHEPURNA YELYZAVETA <155988595+cheliza@users.noreply.github.com>
Co-Authored-By: Maksim Varivodin <maksym.varivodin@gmail.com>
Co-Authored-By: MaksymVarivodin <90093919+MaksimVarivodin@users.noreply.github.com>
Co-Authored-By: Oleksii Parashchyn <oleksii.parashchyn@intellias.com>
Co-Authored-By: Ostap Kutko <159272119+0stapKO@users.noreply.github.com>
Co-Authored-By: Ostap Kutko <ostap22lviv@gmail.com>
Co-Authored-By: PavloFeniak <102671895+PavloFeniak@users.noreply.github.com>
Co-Authored-By: PavloFeniak <phenyakpablo@gmail.com>
Co-Authored-By: Vadum-cmd <vadum.treskot@gmail.com>
Co-Authored-By: Vadym Treskot <74098778+Vadum-cmd@users.noreply.github.com>
Co-Authored-By: cheliz <roikeliz2006@gmail.com>
Co-Authored-By: sm-codes <speccore1947@gmail.com>
Co-Authored-By: sm-lnu <147192535+sm-lnu@users.noreply.github.com>
Co-Authored-By: sm-lnu <mykhailo.stefanyshyn@lnu.edu.ua>
Co-Authored-By: zakharhurniak <ZAKHAR.HURNIAK@lnu.edu.ua>